--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "next": "^13.5.1",
     "nodemon": "^3.0.0",
+    "pdfjs-dist": "^4.6.82",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -57,7 +58,8 @@
     "postcss": "^8.4.39",
     "prettier": "^3.1.0",
     "start-server-and-test": "^2.0.0",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "typescript": "5.5.4"
   },
   "jest": {
     "testEnvironment": "jsdom",
