--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-world-flags": "^1.6.0",
     "reactstrap": "^9.1.5",
     "slick-carousel": "^1.8.1"
   },
